# nlu

./: CMakeLists.txt  ReadMe.md  package.xml  requirements.txt
config/dataset/: en_dataset.json  en_dataset.yaml  fr_dataset.json  fr_dataset.yaml  fr_dataset2.json
config/engine/en_engine/: nlu_engine.json
config/engine/en_engine/custom_entity_parser/parser/parser_1/: parser
config/engine/en_engine/lookup_intent_parser/: intent_parser.json
config/engine/en_engine/probabilistic_intent_parser/: intent_parser.json
config/engine/en_engine/probabilistic_intent_parser/intent_classifier/: intent_classifier.json
config/engine/en_engine/probabilistic_intent_parser/slot_filler_0/: model.crfsuite  slot_filler.json
config/engine/fr_engine/: nlu_engine.json
config/engine/fr_engine/custom_entity_parser/parser/: metadata.json
config/engine/fr_engine/custom_entity_parser/parser/parser_1/: parser
config/engine/fr_engine/custom_entity_parser/parser/parser_2/: parser
config/engine/fr_engine/lookup_intent_parser/: intent_parser.json
config/engine/fr_engine/probabilistic_intent_parser/: intent_parser.json
config/engine/fr_engine/probabilistic_intent_parser/intent_classifier/: intent_classifier.json
config/engine/fr_engine/probabilistic_intent_parser/slot_filler_0/: model.crfsuite  slot_filler.json
config/engine/fr_engine/probabilistic_intent_parser/slot_filler_1/: model.crfsuite
msg/: Slot.msg
scripts/: nlu.py  nlu_engine.py  node_nlu.py  result_nlu.py
srv/: NLUParsingService.srv
(+2 files in other folders)
